--- a/wines.html
+++ b/wines.html
@@ -110,7 +110,7 @@
                 <br>
                 <strong>Price:</strong> $575
             </p>
-            <button href="reservation.html" class="reservation-button">
+            <button href="reservationgroups.html" class="reservation-button">
               Reservation 
               <div class="wine-glasses"></div>
             </button>
@@ -145,7 +145,7 @@
                 <br>
                 <strong>Price:</strong> $575
             </p> 
-            <button href="reservation.html" class="reservation-button">Reservation</button>
+            <button href="reservationgroups.html" class="reservation-button">Reservation</button>
         </div>
         <p class="photo-caption">California</p>
       </div>
@@ -177,7 +177,7 @@
               <br>
               <strong>Price:</strong> $650
             </p>
-            <button href="reservation.html" class="reservation-button">Reservation</button>
+            <button href="reservationgroups.html" class="reservation-button">Reservation</button>
         </div>
         <p class="photo-caption">Italy</p>
       </div>
