--- a/wines.html
+++ b/wines.html
@@ -12,7 +12,7 @@
     <title>wines</title> 
 </head>
 <header>
-  <a href="Untitled-1.html">
+  <a href="index.html">
       <h1 id="logo">Balint's</h1>
   </a>
   <nav>
