--- a/6degu.html
+++ b/6degu.html
@@ -10,7 +10,7 @@
     <title>6 Courses Degustation Menu</title>
 </head>
 <header>
-    <a href="Untitled-1.html">
+    <a href="index.html">
         <h1 id="logo">Balint's</h1>
     </a>
     <nav>
