--- a/champagne.html
+++ b/champagne.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="Untitled-1.html">
+        <a href="index.html">
             <h1 id="logo">Balint's</h1>
         </a>
         <nav>
