--- a/email.html
+++ b/email.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="email.css">
 </head>
 <header>
-    <a href="Untitled-1.html">
+    <a href="index.html">
         <h1 id="logo">Balint's</h1>
     </a>
     <nav>
