--- a/reservation.html
+++ b/reservation.html
@@ -7,7 +7,7 @@
   <title>Restaurant and Tasting Reservation</title>
 </head>
 <header>
-  <a href="Untitled-1.html">
+  <a href="index.html">
       <h1 id="logo">Balint's</h1>
   </a>
   <nav>
