--- a/reservationgroups.html
+++ b/reservationgroups.html
@@ -7,7 +7,7 @@
   <title>Combined Reservation and Payment Form</title>
 </head>
 <header>
-  <a href="Untitled-1.html">
+  <a href="index.html">
       <h1 id="logo">Balint's</h1>
   </a>
   <nav>
