Organize project files into directories

--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Best Restaurant in the World, Zurich,">
     <meta name="keywords" content="restaurant, dining, fine-dining, michelin-star, food, meals, private dining, menu, wine, wines, 
     whiskey, vodka, ">
-<<<<<<<< HEAD:html/index.html
+
     <link rel="stylesheet" href="../assets/css/index.css">
-========
+
     <link rel="stylesheet" href="index.css">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Balint's</title>
 </head>
@@ -64,11 +64,8 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/meal1.jpg" alt="Restaurant Photo 1">
-========
-              <img src="meal1.jpg" alt="Restaurant Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="meal1.jpg">
             </div>
             <div class="back">
               <p>Indulge in a culinary masterpiece that transcends taste, where every dish is a canvas of artistry and innovation.
@@ -82,11 +79,10 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
+
               <img src="../assets/images/wines.jpg" alt="Chef Photo 1">
-========
-              <img src="wines.jpg" alt="Chef Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="wines.jpg">
+
             </div>
             <div class="back">
               <p>Embark on a journey to our prestigious vineyard, where excellence meets terroir. 
@@ -102,11 +98,8 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/meal3.jpg" alt="Dining Setting Photo 1">
-========
-              <img src="meal3.jpg" alt="Dining Setting Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="meal3.jpg">
             </div>
             <div class="back">
               <p>Step into a realm of refined elegance at our Intimate Dining Setting. Here, every detail is meticulously curated to create an ambiance of unparalleled sophistication.
@@ -121,11 +114,9 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/meal4.jpg" alt="Wine Selection Photo 1">
-========
-              <img src="meal4.jpg" alt="Wine Selection Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="meal4.jpg">
+
             </div>
             <div class="back">
               <p>Discover the essence of culinary excellence with our commitment to sourcing the Best Certified Ingredients from around the world. Each dish tells a global story,
@@ -140,11 +131,8 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/meal5.jpg" alt="Restaurant Photo 1">
-========
-              <img src="meal5.jpg" alt="Restaurant Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="meal5.jpg">
             </div>
             <div class="back">
               <p>Experience culinary artistry like never before with our Exquisite Plating: A Symphony of Flavors. Each dish is a masterpiece, thoughtfully crafted to engage your senses 
@@ -159,11 +147,8 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/kitchen1.jpg" alt="Kitchen Photo 1">
-========
-              <img src="kitchen1.jpg" alt="Kitchen Photo 1">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="kitchen1.jpg">
             </div>
             <div class="back">
               <p>Embark on a culinary journey behind the scenes in our State-of-the-Art Kitchen. Here, innovation meets tradition as our chefs craft extraordinary dishes with precision and passion. 
@@ -178,11 +163,8 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-<<<<<<<< HEAD:html/index.html
               <img src="../assets/images/kitchen2.jpg" alt="Kitchen Photo 2">
-========
-              <img src="kitchen2.jpg" alt="Kitchen Photo 2">
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+              <img src="kitchen2.jpg">
             </div>
             <div class="back">
               <p>Delight in the mastery of flavor with our commitment to Innovative Culinary Techniques. Our chefs push the boundaries of culinary creativity, combining tradition with avant-garde 
@@ -222,8 +204,5 @@
   </footer>
  
 </body>
-<<<<<<<< HEAD:html/index.html
 </html>
-========
-</html>
->>>>>>>> 00ba06d2e0afd20ca2517a3d66fa683515838b80:index.html
+
