--- a/html/reservation.html
+++ b/html/reservation.html
@@ -48,6 +48,9 @@
 
 </header>
 
+<body>
+
+
 <div class="container">
   <form action="#" method="post" id="reservationForm">
     <label for="name">Name:</label>
@@ -58,7 +61,6 @@
 
     <label for="people">Number of People:</label>
     <select id="people" name="people" required>
-      <option value="" disabled selected>Select number of people</option>
       <option value="1">1 person</option>
       <option value="2">2 people</option>
       <option value="3">3 people</option>
