--- a/html/singlemalt.html
+++ b/html/singlemalt.html
@@ -49,8 +49,9 @@
   }
   </script>
   
-
-<div class="whiskey-section blended-whiskey">
+  </body>
+    
+    <div class="whiskey-section blended-whiskey">
         <h2>Blended Whiskey Tasting</h2>
         <p>Explore a refined tasting experience featuring a selection of premium and carefully blended whiskies. Immerse yourself in the harmonious combination of flavors and aromas that define our blended whiskey selection.</p>
 
