--- a/html/profession.html
+++ b/html/profession.html
@@ -50,6 +50,8 @@
   </script>
   
 </header>
+<body>
+
     <section id="about-us">
         <div class="subsection" id="beginning">
             <video class="video" controls autoplay loop muted>
@@ -66,6 +68,8 @@
             <p>Philosophically, dining at Balint's is a rendezvous with love, a communion of hearts, where the act of eating transcends mere taste to become an emotional journey. The ambiance is curated with love—a tapestry of warmth and aesthetics, enveloping our guests in the embrace of comfort and joy.</p>
             <p>In this gastronomic love narrative, every dish is a sonnet, every bite a caress, and every guest a cherished muse. The table is not just set with plates; it is an altar adorned with the petals of emotion, where the ritual of dining becomes a mythical opera. The flavors sing arias, the aromas dance a ballet, and the textures weave a tale of culinary enchantment.</p>
             <p>Welcome to Balint's, where the culinary experience is not just a meal; it is a love affair with flavors, a journey into the realms of myth and opera. Come, be part of this epicurean odyssey, where each moment is a poetic interlude, and let Balint's redefine your expectations of fine dining. </p>
+        </div>
     </section>
+
 </body>
 </html>
