Remove README file from Testing folder

--- a/assets/html/email.html
+++ b/assets/html/email.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Best Restaurant in the World, Zurich,">
     <meta name="keywords" content="restaurant, dining, fine-dining, michelin-star, food, meals, private dining, menu, wine, wines, 
     whiskey, vodka, ">
-    <link rel="stylesheet" href="../assets/css/email.css">
+    <link rel="stylesheet" href="../css/email.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Balint's</title>
 </head>
