--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Best Restaurant in the World, Zurich,">
     <meta name="keywords" content="restaurant, dining, fine-dining, michelin-star, food, meals, private dining, menu, wine, wines, 
     whiskey, vodka, ">
-
-    <link rel="stylesheet" href="../assets/css/index.css">
+    
+    <link rel="stylesheet" href="../css/index.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Balint's</title>
@@ -62,7 +62,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/meal1.jpg" alt="Restaurant Photo 1">
+              <img src="../images/meal1.jpg" alt="Restaurant Photo 1">
               <img src="meal1.jpg">
             </div>
             <div class="back">
@@ -78,7 +78,7 @@
           <div class="gallery-item-inner">
             <div class="front">
 
-              <img src="../assets/images/wines.jpg" alt="Chef Photo 1">
+              <img src="../images/wines.jpg" alt="Chef Photo 1">
               <img src="wines.jpg">
 
             </div>
@@ -96,7 +96,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/meal3.jpg" alt="Dining Setting Photo 1">
+              <img src="../images/meal3.jpg" alt="Dining Setting Photo 1">
               <img src="meal3.jpg">
             </div>
             <div class="back">
@@ -112,7 +112,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/meal4.jpg" alt="Wine Selection Photo 1">
+              <img src="../images/meal4.jpg" alt="Wine Selection Photo 1">
               <img src="meal4.jpg">
 
             </div>
@@ -129,7 +129,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/meal5.jpg" alt="Restaurant Photo 1">
+              <img src="../images/meal5.jpg" alt="Restaurant Photo 1">
               <img src="meal5.jpg">
             </div>
             <div class="back">
@@ -145,7 +145,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/kitchen1.jpg" alt="Kitchen Photo 1">
+              <img src="../images/kitchen1.jpg" alt="Kitchen Photo 1">
               <img src="kitchen1.jpg">
             </div>
             <div class="back">
@@ -161,7 +161,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../assets/images/kitchen2.jpg" alt="Kitchen Photo 2">
+              <img src="../images/kitchen2.jpg" alt="Kitchen Photo 2">
               <img src="kitchen2.jpg">
             </div>
             <div class="back">
