--- a/assets/html/reservation.html
+++ b/assets/html/reservation.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>Restaurant Reservation</title>
-  <link rel="stylesheet" href="../assets/css/reservation.css"> 
+  <link rel="stylesheet" href="../css/reservation.css"> 
 
 </head>
 <header>
