Move index.html to root

--- a/assets/html/aboutus.html
+++ b/assets/html/aboutus.html
@@ -17,7 +17,7 @@
 <header>
 
   <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
+    <a href="../../index.html" class="active">Home</a>
     <a href="6degu.html">6c.Degustation </a>
     <a href="10degu.html">10c.Degustation </a>
     <a href="12degu.html">12c. Degustation</a>
