--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="restaurant, dining, fine-dining, michelin-star, food, meals, private dining, menu, wine, wines, 
     whiskey, vodka, ">
     
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Balint's</title>
@@ -19,17 +19,17 @@
 
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="active">Home</a>
-    <a href="6degu.html">6c.Degustation </a>
-    <a href="10degu.html">10c.Degustation </a>
-    <a href="12degu.html">12c. Degustation</a>
-    <a href="wines.html">Wine</a>
-    <a href="champagne.html">Champagne Tasting</a>
-    <a href="singlemalt.html">Whiskey tasting</a>
-    <a href="reservation.html">Reservation</a>
-    <a href="reservationgroups.html">Reservation for Groups</a>
-    <a href="aboutus.html">Beginnings</a>
-    <a href="hospitality.html">Hospitality</a>
-    <a href="profession.html">Profession</a>
+    <a href="assets/html/6degu.html">6c.Degustation </a>
+    <a href="assets/html/10degu.html">10c.Degustation </a>
+    <a href="assets/html/12degu.html">12c. Degustation</a>
+    <a href="assets/html/wines.html">Wine</a>
+    <a href="assets/html/champagne.html">Champagne Tasting</a>
+    <a href="assets/html/singlemalt.html">Whiskey tasting</a>
+    <a href="assets/html/reservation.html">Reservation</a>
+    <a href="assets/html/reservationgroups.html">Reservation for Groups</a>
+    <a href="assets/html/aboutus.html">Beginnings</a>
+    <a href="assets/html/hospitality.html">Hospitality</a>
+    <a href="assets/html/profession.html">Profession</a>
     
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
@@ -62,7 +62,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/meal1.jpg" alt="Restaurant Photo 1">
+              <img src="assets/images/meal1.jpg" alt="Restaurant Photo 1">
               <img src="meal1.jpg">
             </div>
             <div class="back">
@@ -78,7 +78,7 @@
           <div class="gallery-item-inner">
             <div class="front">
 
-              <img src="../images/wines.jpg" alt="Chef Photo 1">
+              <img src="assets/images/wines.jpg" alt="Chef Photo 1">
               <img src="wines.jpg">
 
             </div>
@@ -96,7 +96,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/meal3.jpg" alt="Dining Setting Photo 1">
+              <img src="assets/images/meal3.jpg" alt="Dining Setting Photo 1">
               <img src="meal3.jpg">
             </div>
             <div class="back">
@@ -112,7 +112,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/meal4.jpg" alt="Wine Selection Photo 1">
+              <img src="assets/images/meal4.jpg" alt="Wine Selection Photo 1">
               <img src="meal4.jpg">
 
             </div>
@@ -129,7 +129,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/meal5.jpg" alt="Restaurant Photo 1">
+              <img src="assets/images/meal5.jpg" alt="Restaurant Photo 1">
               <img src="meal5.jpg">
             </div>
             <div class="back">
@@ -145,7 +145,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/kitchen1.jpg" alt="Kitchen Photo 1">
+              <img src="assets/images/kitchen1.jpg" alt="Kitchen Photo 1">
               <img src="kitchen1.jpg">
             </div>
             <div class="back">
@@ -161,7 +161,7 @@
         <div class="gallery-item">
           <div class="gallery-item-inner">
             <div class="front">
-              <img src="../images/kitchen2.jpg" alt="Kitchen Photo 2">
+              <img src="assets/images/kitchen2.jpg" alt="Kitchen Photo 2">
               <img src="kitchen2.jpg">
             </div>
             <div class="back">
